--- a/styles/style.css
+++ b/styles/style.css
@@ -520,3 +520,17 @@ footer {
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
     0 0 100px #03e9f4;
 }
+
+/* phone style */
+.phone-link {
+  text-decoration: none;
+  color: #ffffff;
+  transition: color 0.3s;
+}
+
+.phone-link:hover {
+  color: #c90404;
+  font-size: larger;
+  transition: 1s;
+  font-weight: bolder;
+}
