--- a/styles/style.css
+++ b/styles/style.css
@@ -534,3 +534,12 @@ footer {
   transition: 1s;
   font-weight: bolder;
 }
+
+/* footer */
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  text-align-last: center;
+}
+
